--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ html {
 
 .container-img {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("/assets/img/bg2.jpg");
+    url("/makan-apa-hari-ini/assets/img/bg2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
